--- a/app/views/static/fu.html.erb
+++ b/app/views/static/fu.html.erb
@@ -2,5 +2,7 @@
 
 <h2>Testing I18n localizations</h2>
 
-<p><%= t(:i18n_underscore_key_test) %></p>
-<p><%= t('i18n String test') %></p>
+<p><%= t(:i18n_underscore_key_test_without_translation) %></p>
+<p><%= t('i18n String test without translation') %></p>
+<p><%= t(:i18n_underscore_key_test_with_translation) %></p>
+<p><%= t('i18n String test with translation') %></p>
