--- a/app/views/static/fu.html.erb
+++ b/app/views/static/fu.html.erb
@@ -55,6 +55,7 @@
 <p><%= s_('Scope|Gimme text!') %></p>
 
 <h4>Scoped/Context (p_)</h4>
+<b><span style="color: red">This doesn't work because of <a href="https://github.com/svenfuchs/i18n/issues/116">this bug</a></span></b>
 <p><%= p_('Context', 'Gimme text!') %></p>
 
 <h4>Simple pluralization (n_)</h4>
@@ -73,6 +74,11 @@
 <% end %>
 
 <h4>Scoped/In context pluralization (np_)</h4>
+<b><span style="color: red">This doesn't work because of <a href="https://github.com/svenfuchs/i18n/issues/116">this bug</a></span></b>
 <% [0,1,3,8,100].each do |n| %>
-    <p><%= np_('Context', 'Gimme singular text!', 'Gimme plural text for %{count}!', n) %></p>
+    <p><%#= np_('Context', 'Gimme singular text!', 'Gimme plural text for %{count}!', n) %></p>
 <% end %>
+
+
+<p><%= _('New gettext key!') %></p>
+<p><%= _('And a new one... Mua ha ha') %></p>
